New API for volume/snapshot capacity usage.
Returns exclusive and shared capacity in use by a volume/snapshot.
